// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getItemLabels > should return a list of uniform item labels 1`] = `
[
  {
    "id": "fb0bff-e796-4caf-92ef-c80add825ef6",
    "isReserve": true,
    "label": "Typ1-1100",
    "number": 1100,
    "owner": {
      "firstname": "Maik",
      "id": "81c5d0-713b-4c4f-a2c3-81ec497acb29",
      "lastname": "Finkel",
    },
    "storageUnit": null,
    "type": {
      "acronym": "AA",
      "id": "659ad7-7b45-4c31-8ee0-8f8c2d385886",
      "name": "Typ1",
    },
  },
  {
    "id": "4937ee-8861-4bee-b19f-0e2ffdd62b6a",
    "isReserve": true,
    "label": "Typ1-1101",
    "number": 1101,
    "owner": {
      "firstname": "Maik",
      "id": "81c5d0-713b-4c4f-a2c3-81ec497acb29",
      "lastname": "Finkel",
    },
    "storageUnit": null,
    "type": {
      "acronym": "AA",
      "id": "659ad7-7b45-4c31-8ee0-8f8c2d385886",
      "name": "Typ1",
    },
  },
  {
    "id": "947027-47e7-42ef-b09d-2068b96927c1",
    "isReserve": true,
    "label": "Typ1-1102",
    "number": 1102,
    "owner": {
      "firstname": "Maik",
      "id": "81c5d0-713b-4c4f-a2c3-81ec497acb29",
      "lastname": "Finkel",
    },
    "storageUnit": null,
    "type": {
      "acronym": "AA",
      "id": "659ad7-7b45-4c31-8ee0-8f8c2d385886",
      "name": "Typ1",
    },
  },
  {
    "id": "7df078-cd9e-407f-bb59-adbc5144c2b3",
    "isReserve": true,
    "label": "Typ1-1103",
    "number": 1103,
    "owner": null,
    "storageUnit": null,
    "type": {
      "acronym": "AA",
      "id": "659ad7-7b45-4c31-8ee0-8f8c2d385886",
      "name": "Typ1",
    },
  },
  {
    "id": "659858-b55f-4819-9f9d-3085013d245c",
    "isReserve": true,
    "label": "Typ1-1104",
    "number": 1104,
    "owner": null,
    "storageUnit": null,
    "type": {
      "acronym": "AA",
      "id": "659ad7-7b45-4c31-8ee0-8f8c2d385886",
      "name": "Typ1",
    },
  },
  {
    "id": "23bb1c-4387-4fea-8f5d-52f3a8db9b51",
    "isReserve": true,
    "label": "Typ1-1105",
    "number": 1105,
    "owner": null,
    "storageUnit": null,
    "type": {
      "acronym": "AA",
      "id": "659ad7-7b45-4c31-8ee0-8f8c2d385886",
      "name": "Typ1",
    },
  },
  {
    "id": "107f3d-85f7-4162-9a13-5ccce88b4626",
    "isReserve": true,
    "label": "Typ1-1106",
    "number": 1106,
    "owner": null,
    "storageUnit": null,
    "type": {
      "acronym": "AA",
      "id": "659ad7-7b45-4c31-8ee0-8f8c2d385886",
      "name": "Typ1",
    },
  },
  {
    "id": "6e9239-aebd-40ab-9c8f-942c234f7179",
    "isReserve": true,
    "label": "Typ1-1107",
    "number": 1107,
    "owner": null,
    "storageUnit": null,
    "type": {
      "acronym": "AA",
      "id": "659ad7-7b45-4c31-8ee0-8f8c2d385886",
      "name": "Typ1",
    },
  },
  {
    "id": "9a453c-607e-4950-ad8b-12d8b61688fd",
    "isReserve": true,
    "label": "Typ1-1108",
    "number": 1108,
    "owner": null,
    "storageUnit": {
      "id": "3984d9-17ac-423d-b5d9-8f9473c225d5",
      "name": "Kiste 01",
    },
    "type": {
      "acronym": "AA",
      "id": "659ad7-7b45-4c31-8ee0-8f8c2d385886",
      "name": "Typ1",
    },
  },
  {
    "id": "534ca4-b5bd-4538-bdfa-7413c8b9ca36",
    "isReserve": true,
    "label": "Typ1-1109",
    "number": 1109,
    "owner": null,
    "storageUnit": {
      "id": "3984d9-17ac-423d-b5d9-8f9473c225d5",
      "name": "Kiste 01",
    },
    "type": {
      "acronym": "AA",
      "id": "659ad7-7b45-4c31-8ee0-8f8c2d385886",
      "name": "Typ1",
    },
  },
]
`;

exports[`should return a list of defficiencies 1`] = `
[
  {
    "comment": "Uniform Deficiency Sven Keller Unresolved",
    "dateCreated": {},
    "dateResolved": null,
    "dateUpdated": {},
    "description": "Typ1-1146",
    "id": "c41263-aa86-489b-a4cf-536062ac413b",
    "typeId": "8ddf5b-3238-4105-9749-70b86a6c1e00",
    "typeName": "Uniform",
    "userCreated": "test2",
    "userResolved": null,
    "userUpdated": "test3",
  },
  {
    "comment": "Broken Uniform Deficiency Unresolved",
    "dateCreated": {},
    "dateResolved": null,
    "dateUpdated": {},
    "description": "Typ1-1146",
    "id": "d3a7f8-0a9e-4b6c-bd2e-0f1a5b8c3d7e",
    "typeId": "ab6b52-309a-4355-bd47-36234dc370ec",
    "typeName": "Uniform Broken",
    "userCreated": "test4",
    "userResolved": null,
    "userUpdated": "test4",
  },
]
`;

exports[`should return a list of defficiencies with resolved 1`] = `
[
  {
    "comment": "Uniform Deficiency Sven Keller Unresolved",
    "dateCreated": {},
    "dateResolved": null,
    "dateUpdated": {},
    "description": "Typ1-1146",
    "id": "c41263-aa86-489b-a4cf-536062ac413b",
    "typeId": "8ddf5b-3238-4105-9749-70b86a6c1e00",
    "typeName": "Uniform",
    "userCreated": "test2",
    "userResolved": null,
    "userUpdated": "test3",
  },
  {
    "comment": "Uniform Deficiency Sven Keller Resolved",
    "dateCreated": {},
    "dateResolved": {},
    "dateUpdated": {},
    "description": "Typ1-1146",
    "id": "69d747-c9b1-4a63-9795-d2c51939fc18",
    "typeId": "8ddf5b-3238-4105-9749-70b86a6c1e00",
    "typeName": "Uniform",
    "userCreated": "test4",
    "userResolved": "test4",
    "userUpdated": "test4",
  },
  {
    "comment": "Broken Uniform Deficiency Resolved",
    "dateCreated": {},
    "dateResolved": {},
    "dateUpdated": {},
    "description": "Typ1-1146",
    "id": "c0f1a2-4b5d-4e8f-9a3b-6c7d0e1f2b5c",
    "typeId": "ab6b52-309a-4355-bd47-36234dc370ec",
    "typeName": "Uniform Broken",
    "userCreated": "test4",
    "userResolved": "test4",
    "userUpdated": "test4",
  },
  {
    "comment": "Broken Uniform Deficiency Unresolved",
    "dateCreated": {},
    "dateResolved": null,
    "dateUpdated": {},
    "description": "Typ1-1146",
    "id": "d3a7f8-0a9e-4b6c-bd2e-0f1a5b8c3d7e",
    "typeId": "ab6b52-309a-4355-bd47-36234dc370ec",
    "typeName": "Uniform Broken",
    "userCreated": "test4",
    "userResolved": null,
    "userUpdated": "test4",
  },
]
`;

exports[`should return a list of uniform history entries 1`] = `
[
  {
    "cadet": {
      "firstname": "Marie",
      "lastname": "Becker",
    },
    "dateIssued": 2023-08-16T00:00:00.000Z,
    "dateReturned": null,
  },
  {
    "cadet": {
      "firstname": "Antje",
      "lastname": "Fried",
    },
    "dateIssued": 2023-08-11T00:00:00.000Z,
    "dateReturned": 2023-08-15T00:00:00.000Z,
  },
  {
    "cadet": {
      "firstname": "Christina",
      "lastname": "Faber",
    },
    "dateIssued": 2023-08-06T00:00:00.000Z,
    "dateReturned": 2023-08-10T00:00:00.000Z,
  },
  {
    "cadet": {
      "firstname": "Simone",
      "lastname": "Osterhagen",
    },
    "dateIssued": 2023-08-01T00:00:00.000Z,
    "dateReturned": 2023-08-05T00:00:00.000Z,
  },
]
`;
